; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_nwflash.c_flash_ioctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_nwflash.c_flash_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@gbWriteBase64Enable = common dso_local global i32 0, align 4
@gbWriteEnable = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*, i32, i64)* @flash_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flash_ioctl(%struct.inode* %0, %struct.file* %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.inode*, align 8
  %7 = alloca %struct.file*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.inode* %0, %struct.inode** %6, align 8
  store %struct.file* %1, %struct.file** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %10 = load i32, i32* %8, align 4
  switch i32 %10, label %14 [
    i32 129, label %11
    i32 128, label %12
    i32 130, label %13
  ]

11:                                               ; preds = %4
  store i32 0, i32* @gbWriteBase64Enable, align 4
  store i32 0, i32* @gbWriteEnable, align 4
  br label %17

12:                                               ; preds = %4
  store i32 1, i32* @gbWriteEnable, align 4
  br label %17

13:                                               ; preds = %4
  store i32 1, i32* @gbWriteBase64Enable, align 4
  br label %17

14:                                               ; preds = %4
  store i32 0, i32* @gbWriteBase64Enable, align 4
  store i32 0, i32* @gbWriteEnable, align 4
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %5, align 4
  br label %18

17:                                               ; preds = %13, %12, %11
  store i32 0, i32* %5, align 4
  br label %18

18:                                               ; preds = %17, %14
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
